Determine correct tenant id where pieces and orders are located